# tiny-utils

c utils/: clocker.h  utf8_substr.cpp
c_utils/: ansi_color.cpp  cs_malloc.h  cstr.c  cstr.h  timeutils.cpp
cmake_examples/: CMakeLists.txt  CMakeLists1.txt  config.my_proto.cmake  config.myapi.cmake
cpp_utils/: cppversion_macro.h  lock.cpp  lockfree_queue.cpp  noncopyable.h  num_base_x.cpp  object_pool.cpp  observer.cpp  rwlock.cpp  singleton.cpp  timer.cpp  token_frequency_control.cpp
python_tools/: download_image.py
python_utils/: mylib_config.py  mylib_date.py  mylib_mail.py  mylib_mysql.py  mylib_net.py  mylib_sftp.py  mylib_zipfile.py  mylib_zmqclient.py
shell utils/: strcmp.sh
shell_utils/: go_user.sh  log_rotate_example.sh  reserve_log.sh  scp.expect
